--- a/config
+++ b/config
@@ -57,3 +57,7 @@ au TermOpen * setlocal nonumber norelativenumber
 
 " use ctrl-s to save
 nnoremap <silent> <C-s> :w<CR>
+
+" use [shift]-tab to cycle through tabs
+nnoremap <silent> <Tab> :tabnext<CR>
+nnoremap <silent> <S-Tab> :tabprevious<CR>
