--- a/config
+++ b/config
@@ -74,3 +74,8 @@ cabbrev f find
 
 " TEMP:just until I get used to using :f instead of :e
 cabbrev e !echo use :f
+
+" relative line numbers only when not in insert mode
+set rnu
+au InsertEnter * setlocal nornu
+au InsertLeave * setlocal rnu
