--- a/config
+++ b/config
@@ -74,3 +74,7 @@ cabbrev f find
 
 " disable ex mode
 map Q <Nop>
+
+" netrw - remove banner and show project tree
+let g:netrw_banner=0
+let g:netrw_liststyle=3
