--- a/config
+++ b/config
@@ -97,3 +97,7 @@ autocmd BufWritePre * call StripTrailingWhitespace()
 highlight link Sneak Normal
 omap s <Plug>Sneak_s
 omap S <Plug>Sneak_S
+
+" DCD completion stuff
+autocmd BufEnter *.d call ncm2#enable_for_buffer()
+set completeopt=noinsert,menuone
