silence dcd errors

--- a/config
+++ b/config
@@ -99,5 +99,5 @@ omap s <Plug>Sneak_s
 omap S <Plug>Sneak_S
 
 " DCD completion stuff
-autocmd BufEnter *.d call ncm2#enable_for_buffer()
+autocmd BufEnter *.d silent! ncm2#enable_for_buffer()
 set completeopt=noinsert,menuone
