--- a/config
+++ b/config
@@ -100,4 +100,4 @@ omap S <Plug>Sneak_S
 
 " DCD completion stuff
 autocmd BufEnter *.d call ncm2#enable_for_buffer()
-set completeopt=noinsert,menuone
+autocmd BufEnter *.d set completeopt=noinsert,menuone
