use setlocal for dcd menuopt

--- a/config
+++ b/config
@@ -103,4 +103,4 @@ omap S <Plug>Sneak_S
 
 " DCD completion stuff
 autocmd BufEnter *.d call ncm2#enable_for_buffer()
-autocmd BufEnter *.d set completeopt=noinsert,menuone
+autocmd BufEnter *.d setlocal completeopt=noinsert,menuone
